@@ -4,7 +4,7 @@ return array(
     'app_version' => '2.0.1',
     
     // 发布时间
-    'release_time' => '20190813',
+    'release_time' => '20190815',
     
     // 修订版本
     'revise_version' => '0'
