@@ -4,6 +4,14 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
+PbootCMS V2.0.1 build 2019-08-15
+1、去除内置测试账号，避免被恶意利用；
+2、优化编辑器工具栏浮动功能；
+3、优化数据库备份文件名称;
+4、优化基础环境组件检查功能；
+5、修复默认模板一处链接错误；
+6、修复API一处提示文字错误；
+
 PbootCMS V2.0.0 build 2019-08-12
 1、全新多种URL地址模式上线，模型、栏目、内容自由后台设置；
 2、后台不再依赖pathinfo提高环境兼容性；
